# recipebox-1

./: READ.ME  pyproject.toml
recipe/: admin.py  forms.py  models.py  urls.py  views.py
recipe/migrations/: 0001_initial.py  0002_author_favorite_recipes.py
recipe/templates/: addauthorform.html  addrecipeform.html  author.html  forbidden.html  genericform.html  index.html  logoutpage.html  recipe.html
recipes/: settings.py  urls.py
